update: server and client pakages

--- a/master/server/package.json
+++ b/master/server/package.json
@@ -5,7 +5,9 @@
   "main": "index.ts",
   "license": "MIT",
   "dependencies": {
+    "@koa/router": "^10.0.0",
     "@types/koa": "^2.11.6",
+    "@types/koa-router": "^7.4.1",
     "koa": "^2.13.0"
   }
 }
