--- a/master/server/package.json
+++ b/master/server/package.json
@@ -7,7 +7,21 @@
   "dependencies": {
     "@koa/router": "^10.0.0",
     "@types/koa": "^2.11.6",
-    "@types/koa-router": "^7.4.1",
-    "koa": "^2.13.0"
+    "@types/koa-bodyparser": "^4.3.0",
+    "@types/koa-static": "^4.0.1",
+    "@types/koa__router": "^8.0.3",
+    "@types/uuid": "^8.3.0",
+    "koa": "^2.13.0",
+    "koa-bodyparser": "^4.3.0",
+    "koa-static": "^5.0.0",
+    "mariadb": "^2.5.1",
+    "uuid": "^8.3.1"
+  },
+  "devDependencies": {
+    "@tsconfig/recommended": "^1.0.1"
+  },
+  "scripts": {
+    "start": "node build/app.js",
+    "build": "tsc"
   }
 }
