--- a/master/server/package.json
+++ b/master/server/package.json
@@ -5,10 +5,12 @@
   "main": "index.ts",
   "license": "MIT",
   "dependencies": {
+    "@koa/cors": "^3.1.0",
     "@koa/router": "^10.0.0",
     "@types/koa": "^2.11.6",
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-static": "^4.0.1",
+    "@types/koa__cors": "^3.0.2",
     "@types/koa__router": "^8.0.3",
     "@types/uuid": "^8.3.0",
     "koa": "^2.13.0",
