--- a/master/client/package.json
+++ b/master/client/package.json
@@ -11,11 +11,18 @@
     "@types/react": "^16.9.53",
     "@types/react-bootstrap": "^0.32.24",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router-bootstrap": "^0.24.5",
+    "@types/react-router-dom": "^5.1.6",
     "bootstrap": "^4.5.3",
+    "express": "^4.17.1",
+    "http-proxy-middleware": "^1.0.6",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-router-bootstrap": "^0.25.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "remove": "^0.1.5",
     "typescript": "4.0.3",
     "web-vitals": "^0.2.4"
   },
@@ -42,5 +49,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {}
 }
