update: accpet images from post request update: store image name into db linked with each job update: store images into disk

--- a/master/server/src/config/app-config.json
+++ b/master/server/src/config/app-config.json
@@ -1,7 +1,8 @@
 {
     "app": {
         "listen_port": 5000,
-        "maximum_worker": 100
+        "maximum_worker": 100,
+        "upload_dir": "./uploads/imgs/"
     },
     "db": {
         "db_addr": "192.168.1.85",
