update: optimize build && start scripts

--- a/master/client/package.json
+++ b/master/client/package.json
@@ -28,8 +28,9 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start-dev": "./start-dev.sh",
+    "start-prod": "./start-prod.sh",
+    "build": "./build.sh",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
