--- a/master/server/package.json
+++ b/master/server/package.json
@@ -25,7 +25,8 @@
     "@tsconfig/recommended": "^1.0.1"
   },
   "scripts": {
-    "start": "node build/app.js",
-    "build": "tsc"
+    "start-dev": "./start-dev.sh",
+    "start-prod": "./start-prod.sh",
+    "build": "./build.sh"
   }
 }
