--- a/master/server/package.json
+++ b/master/server/package.json
@@ -13,12 +13,15 @@
     "@types/koa-static": "^4.0.1",
     "@types/koa__cors": "^3.0.2",
     "@types/koa__router": "^8.0.3",
+    "@types/node-fetch": "^2.5.7",
     "@types/uuid": "^8.3.0",
+    "form-data": "^3.0.0",
     "koa": "^2.13.0",
     "koa-bodyparser": "^4.3.0",
     "koa-multer": "^1.0.2",
     "koa-static": "^5.0.0",
     "mariadb": "^2.5.1",
+    "node-fetch": "^2.6.1",
     "uuid": "^8.3.1"
   },
   "devDependencies": {
