--- a/master/client/package.json
+++ b/master/client/package.json
@@ -23,6 +23,7 @@
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-transition-group": "^4.4.1",
     "remove": "^0.1.5",
     "typescript": "4.0.3",
     "web-vitals": "^0.2.4"
