--- a/master/server/package.json
+++ b/master/server/package.json
@@ -22,6 +22,7 @@
     "koa-static": "^5.0.0",
     "mariadb": "^2.5.1",
     "node-fetch": "^2.6.1",
+    "typescript": "^4.1.2",
     "uuid": "^8.3.1"
   },
   "devDependencies": {
