update: worker model and script update: root readme add: rspec.xml update: worker server's logic to execute model remove: old demos

--- a/worker/server/src/config/app-config.json
+++ b/worker/server/src/config/app-config.json
@@ -2,7 +2,8 @@
     "app": {
         "listen_port": 6000,
         "upload_dir": "./uploads/imgs/",
-        "master_server_addr": "192.168.1.113",
-        "master_server_port": 5000
+        "master_server_addr": "pcvm3-23.instageni.cenic.net",
+        "master_server_port": 5000,
+        "model_runner": "run_mobilenet_v2.py"
     }
 }
