--- a/worker/server/package.json
+++ b/worker/server/package.json
@@ -22,6 +22,7 @@
     "koa-bodyparser": "^4.3.0",
     "koa-multer": "^1.0.2",
     "node-fetch": "^2.6.1",
+    "typescript": "^4.1.2",
     "uuid": "^8.3.1"
   }
 }
