--- a/worker/server/src/config/app-config-prod.json
+++ b/worker/server/src/config/app-config-prod.json
@@ -3,6 +3,7 @@
         "listen_port": 6000,
         "upload_dir": "./uploads/imgs/",
         "master_server_addr": "pcvm3-23.instageni.cenic.net",
-        "master_server_port": 5000
+        "master_server_port": 5000,
+        "model_runner": "run_mobilenet_v2.py"
     }
 }
