--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -1,14 +1,25 @@
+asn1crypto==0.24.0
 certifi==2020.12.5
 chardet==3.0.4
+cryptography==2.6.1
 cycler==0.10.0
+decorator==4.3.0
+entrypoints==0.3
 idna==2.10
-kiwisolver==1.3.1
-matplotlib==3.3.3
-numpy==1.19.4
-Pillow==8.0.1
-pkg-resources==0.0.0
-pyparsing==2.4.7
+keyring==17.1.1
+keyrings.alt==3.1.1
+kiwisolver==1.0.1
+matplotlib==3.0.2
+numpy==1.16.2
+olefile==0.46
+Pillow==5.4.1
+pycrypto==2.6.1
+PyGObject==3.30.4
+pyparsing==2.2.0
 python-dateutil==2.8.1
+pyxdg==0.25
 requests==2.25.0
-six==1.15.0
+scipy==1.1.0
+SecretStorage==2.3.1
+six==1.12.0
 urllib3==1.26.2
